--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "app.cjs",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.cjs"
   },
   "keywords": [],
   "author": "",
