--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.cjs",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.cjs"
+    "start": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
